# MDRepaintClothing

./: .gitignore  README.md  TODO.md  cursor.rule.development.mdc  cursor.rule.general.mdc  cursor.rule.history.mdc  cursor.rule.log.mdc  cursor.rule.mdc  cursor.rule.model.mdc  cursor.rule.param.mdc  cursor.rule.structure.mdc  download_models.py  package-lock.json  pyproject.toml  requirements.txt  start_all.bat  tech_selection.md
.cursor/rules/: cursor.rule.development.mdc  cursor.rule.general.mdc  cursor.rule.history.mdc  cursor.rule.log.mdc  cursor.rule.model.mdc  cursor.rule.param.mdc  myrule.mdc
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: DescribePanel.jsx  ImageUploader.jsx  SegmentationPanel.jsx  SegmentationPreview.jsx
frontend/src/components/description/: DescriptionPanel.jsx
models/janus/processor/: processor_config.json  special_tokens_map.json  tokenizer_config.json
src/: __init__.py  config_loader.py  describe_api.py  logging_config.py  main.py  prompt_engineering.py  segmentation_api.py  segmentation_service.py  upload.py
src/description/: description_service.py  prompt_templates.py
src/uploads/: blob_1
tests/: model_inference_test.py  test_segmentation.py
tests/description/: test_description_service.py
